# Embedded-Dev

./: README.md
cleanDev/cmake_edu/: CMakeLists.txt  example.cmake
cleanDev/cmake_edu/src/: CMakeLists.txt  main.c
cleanDev/cmake_edu/src/build2/: tutorial.txt
cleanDev/rpi/pico-w/: CMakeLists.txt  pico_sdk_import.cmake
cleanDev/rpi/pico-w/src/: CMakeLists.txt
